--- a/src/main/resources/templates/addMovement.html
+++ b/src/main/resources/templates/addMovement.html
@@ -9,19 +9,19 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     <style>
     a{
-    color:black;
+    color:white;
     }
     a:hover {
-    color: black;
+    color: white;
     text-decoration:none;
     }
 </style>
 </head>
-<body>
+<body class="bg-dark text-white">
 
 <div class="container fw-bold">
     <p th:inline="text" class="text-right fw-bold">User: [[${#httpServletRequest.remoteUser}]]</p><br>
-    <button type="button" class="btn btn-danger fw-bold" style="float:right"><a th:href="@{/logout}">Log out</a></button>
+    <button type="button" class="btn btn-danger fw-bold text-white" style="float:right"><a th:href="@{/logout}">Log out</a></button>
 
     <h1 class="display-5 fw-bold"> Agregue aqui los datos del movimiento</h1>
     <br>
@@ -31,8 +31,8 @@
         <div class="row fw-bold">
             <div class="form-group col-md-12">
                 <label class="col-md-3 fw-bold" for="concepto">Concepto del Movimiento:</label>
-                <div class="col-md-6 fw-bold">
-                    <select th:field="*{concepto}" class="form-control fw-bold" id="concepto" required="required">
+                <div class="col-md-6 fw-bold bg-dark text-white">
+                    <select th:field="*{concepto}" class="form-control fw-bold bg-dark text-white" id="concepto" required="required">
                         <option th:value=1>Materias Primas</option>
                         <option th:value=2>Aditivos</option>
                         <option th:value=3>Empaques</option>
@@ -56,7 +56,7 @@
             <div class="form-group col-md-12 fw-bold">
                 <label class="col-md-3 fw-bold" for="monto">Valor del movimiento:</label>
                 <div class="col-md-6 fw-bold">
-                    <input type="number" th:field="*{monto}" class="form-control fw-bold" id="monto" required="required"></div>
+                    <input type="number" th:field="*{monto}" class="form-control fw-bold bg-dark text-white" id="monto" required="required"></div>
             </div>
         </div>
 
@@ -65,7 +65,7 @@
             <div class="form-group col-md-12 fw-bold">
                 <label class="col-md-3 fw-bold" for="usuario">Empleado responsable:</label>
                 <div class="col-md-6 fw-bold">
-                    <select th:field="*{usuario}" class="form-control fw-bold" id="usuario" required="required" readonly>
+                    <select th:field="*{usuario}" class="form-control fw-bold bg-dark text-white" id="usuario" required="required" readonly>
                         <option th:each = "user: ${userList}" th:value="${user.id}" th:text = "${user.nombre}"></option>
                     </select>
                 </div>
@@ -74,25 +74,25 @@
 
 
 
-        <div class="row fw-bold">
-            <div class="form-group col-md-12 fw-bold">
-                <label class="col-md-3 fw-bold" for="fecha">Fecha del movimiento:</label>
-                <div class="col-md-6 fw-bold">
-                    <input type="date" th:field="*{fecha}" class="form-control fw-bold" id="fecha" required="required"></div>
+        <div class="row fw-bold bg-dark text-white">
+            <div class="form-group col-md-12 fw-bold bg-dark text-white">
+                <label class="col-md-3 fw-bold bg-dark text-white" for="fecha">Fecha del movimiento:</label>
+                <div class="col-md-6 fw-bold bg-dark text-white">
+                    <input type="date" th:field="*{fecha}" class="form-control fw-bold bg-dark text-white" id="fecha" required="required"></div>
             </div>
         </div>
 
 
         <div class="row fw-bold">
             <div class="col-md-2 fw-bold">
-                <button class="btn btn-success fw-bold">Registrar Movimiento</button>
+                <button class="btn btn-success fw-bold text-white">Registrar Movimiento</button>
             </div>
         </div>
 
     </form>
 
     <br>
-    <a href="javascript: history.go(-1)" class="btn btn-info fw-bold" role="button">Atrás</a>
+    <a href="javascript: history.go(-1)" class="btn btn-info fw-bold bg-dark text-white" role="button">Atrás</a>
 
 </div>
 <script th:inline="javascript">
