--- a/src/main/resources/templates/editEnterprise.html
+++ b/src/main/resources/templates/editEnterprise.html
@@ -9,17 +9,17 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
   <style>
     a{
-    color:black;
+    color:white;
     }
     a:hover {
-    color: #616A6B;
+    color: white;
     text-decoration:none;
     }
 </style>
 </head>
-<body>
+<body class="bg-dark text-white">
 
-<div class="container fw-bold">
+<div class="container fw-bold text-white">
   <p th:inline="text" class="text-right fw-bold">User: [[${#httpServletRequest.remoteUser}]]</p>
   <button type="button" class="btn btn-danger fw-bold" style="float:right"><a th:href="@{/logout}">Log Out</a></button>
   <h1 class="display-5 fw-bold"> Actualizar los  datos de la Empresa</h1>
@@ -31,7 +31,7 @@
       <div class="form-group col-md-12 fw-bold">
         <label class="col-md-3 fw-bold" for="id">ID de la Empresa:</label>
         <div class="col-md-6 fw-bold">
-          <input type="text" th:field="*{id}" class="form-control fw-bold" id="id" required="required" readonly>
+          <input type="text" th:field="*{id}" class="form-control fw-bold bg-dark text-white" id="id" required="required" readonly>
         </div>
       </div>
     </div>
@@ -41,7 +41,7 @@
       <div class="form-group col-md-12 fw-bold">
         <label class="col-md-3 fw-bold" for="nombre">Nombre de la Empresa:</label>
         <div class="col-md-6 fw-bold">
-          <input type="text" th:field="*{nombre}" class="form-control fw-bold" id="nombre" required="required">
+          <input type="text" th:field="*{nombre}" class="form-control fw-bold bg-dark text-white" id="nombre" required="required">
         </div>
       </div>
     </div>
@@ -51,7 +51,7 @@
       <div class="form-group col-md-12 fw-bold">
         <label class="col-md-3 fw-bold" for="direccion">Direccion de la empresa:</label>
         <div class="col-md-6 fw-bold">
-          <input type="text" th:field="*{direccion}" class="form-control fw-bold" id="direccion" required="required"></div>
+          <input type="text" th:field="*{direccion}" class="form-control fw-bold bg-dark text-white" id="direccion" required="required"></div>
       </div>
     </div>
 
@@ -60,7 +60,7 @@
       <div class="form-group col-md-12 fw-bold">
         <label class="col-md-3 fw-bold fw-bold" for="telefono">Telefono de la empresa:</label>
         <div class="col-md-6 fw-bold">
-          <input type="text" th:field="*{telefono}" class="form-control fw-bold" id="telefono" required="required"></div>
+          <input type="text" th:field="*{telefono}" class="form-control fw-bold bg-dark text-white" id="telefono" required="required"></div>
       </div>
     </div>
 
@@ -68,7 +68,7 @@
       <div class="form-group col-md-12 fw-bold">
         <label class="col-md-3 fw-bold fw-bold" for="NIT">NIT de la empresa:</label>
         <div class="col-md-6 fw-bold">
-          <input type="text" th:field="*{nit}" class="form-control fw-bold" id="NIT" required="required"></div>
+          <input type="text" th:field="*{nit}" class="form-control fw-bold bg-dark text-white" id="NIT" required="required"></div>
       </div>
     </div>
 
@@ -76,15 +76,14 @@
 
     <div class="row fw-bold">
       <div class="col-md-2 fw-bold">
-        <button class="btn btn-success fw-bold"> Actualizar Empresa  </button>
+        <button class="btn btn-success fw-bold text-white"> Actualizar Empresa  </button>
       </div>
     </div>
 
   </form>
 
   <br>
-  <a href="javascript: history.go(-1)" class="btn btn-info fw-bold" role="button">Atrás</a>
-
+  <a href="javascript: history.go(-1)" class="btn btn-info fw-bold text-white " role="button">Atrás</a>
 
 </div>
 </body>
