--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -20,9 +20,7 @@
 <body class="bg-dark text-white">
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
 <main>
-
-
-    <div class="px-4 py-5 my-5 text-center bg-dark text-white" >
+    <div class="px-4 py-5 my-5 text-center" >
         <img src="img/Logo.jpeg" class="d-block mx-auto mb-4 rounded" height="250" />
         <h1 class="display-5 fw-bold">Bienvenid@ a Smart Team Manage Enterprises</h1>
         <div class="col-lg-6 mx-auto">
