--- a/src/main/resources/templates/viewMovement.html
+++ b/src/main/resources/templates/viewMovement.html
@@ -11,23 +11,23 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"></script>
     <style>
     a{
-    color:black;
+    color:white;
     }
     a:hover {
-    color: black;
+    color: white;
     text-decoration:none;
     }
 </style>
 </head>
-<body>
+<body class="bg-dark text-white">
 
-<div class="container fw-bold ">
+<div class="container fw-bold bg-dark text-white">
     <p th:inline="text" class="text-right fw-bold">User: [[${#httpServletRequest.remoteUser}]]</p>
-    <button type="button" class="btn btn-danger fw-bold" style="float:right"><a th:href="@{/logout}">Log Out</a></button>
+    <button type="button" class="btn btn-danger fw-bold text-white" style="float:right"><a th:href="@{/logout}">Log Out</a></button>
 
     <h1 class="display-5 fw-bold"> Lista de movimientos</h1>
 
-    <br><table class="table table-bordered fw-bold">
+    <br><table class="table table-bordered fw-bold bg-dark text-white ">
     <tr>
         <th class="fw-bold">ID</th>
         <th class="fw-bold">Concepto</th>
@@ -58,8 +58,8 @@
         <td th:text="${movement.usuario.nombre}"></td>
         <td th:text="${movement.usuario.empresa}"></td>
         <td th:text="${#dates.format(movement.fecha, 'dd/MM/yyyy')}"></td>
-        <td><button type="button" class="btn btn-warning fw-bold"><a th:href="@{/editmovement/{id}(id=${movement.id})}">Editar</a></button></td>
-        <td><button type="button" class="btn btn-danger fw-bold"><a th:href="@{/deletemovement/{id}(id=${movement.id})}">Eliminar</a></button></td>
+        <td><button type="button" class="btn btn-warning fw-bold text-white"><a th:href="@{/editmovement/{id}(id=${movement.id})}">Editar</a></button></td>
+        <td><button type="button" class="btn btn-danger fw-bold text-white"><a th:href="@{/deletemovement/{id}(id=${movement.id})}">Eliminar</a></button></td>
     </tr>
 </table>
 
@@ -75,19 +75,19 @@
         <div class="form-group col-md-12">
             <label class="col-md-3 fw-bold" for="sumaMontos">Total Movimientos:</label>
             <div class="col-md-6 fw-bold">
-                <p th:text="${#numbers.formatCurrency(sumaMontos)}" class="form-control fw-bold" id="sumaMontos"></p>
+                <p th:text="${#numbers.formatCurrency(sumaMontos)}" class="form-control fw-bold bg-dark text-white" id="sumaMontos"></p>
             </div>
         </div>
     </div>
 
 
-    <button type="button" class="btn btn-info fw-bold"><a th:href="@{/addmovement}">Agregar Nuevo Movimiento</a></button>
+    <button type="button" class="btn btn-info fw-bold text-white"><a th:href="@{/addmovement}">Agregar Nuevo Movimiento</a></button>
     <br><br>
 
-    <button type="button" class="btn btn-primary fw-bold"><a th:href="@{/viewenterprises}">Ver lista de Empresas</a></button>
+    <button type="button" class="btn btn-primary fw-bold text-white"><a th:href="@{/viewenterprises}">Ver lista de Empresas</a></button>
     <br><br>
 
-    <button type="button" class="btn btn-primary fw-bold"><a th:href="@{/viewusers}">Ver lista de Empleados</a></button>
+    <button type="button" class="btn btn-primary fw-bold text-white"><a th:href="@{/viewusers}">Ver lista de Empleados</a></button>
 </div>
 
 <script th:inline="javascript">
